apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__authenticated__tests__renamed_directive.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
expression: "TestResult { query: QUERY, result: doc, paths }"
---
query:

        query {
            topProducts {
                type
            }

            me {
                name
            }
        }
        
filtered:
{
  topProducts {
    type
  }
}

paths: ["/me"]
